# Pixelfall-Sample-Game

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  sources.txt
assets/shaders/: fragment_shader.glsl  fragment_shader_yellow.glsl
docs/: chess.md  conventions.md  design.md
pixelfall/: CMakeLists.txt  LICENSE  sources.txt
pixelfall/assets/shaders/opengl/: fxaa_screen.frag.glsl  geometry.frag.glsl  geometry.vert.glsl  msaa_screen.frag.glsl  screen.vert.glsl  screen_vertex_shader.glsl  sprite.frag.glsl  sprite.vert.glsl
pixelfall/docs/: conventions.md  dependencies.md  notes.md  snippets.md
pixelfall/engine/config/: application_config.h  engine_config.h  painter_config.h  shader_config.h  window_config.h
pixelfall/engine/core/: application.cpp  application.h  clock.h  engine.cpp  engine.h  window.h
pixelfall/engine/graphics/: color.cpp  color.h  framebuffer.h  mesh.h  painter.cpp  painter.h  shader.h  texture.h  texture_cache.cpp  texture_cache.h
pixelfall/engine/input/: input.h  input_manager.h  keycodes.h
pixelfall/engine/math/: tools.h  vector2.h  vector3.h  vector4.h  vectors.h
pixelfall/platform/opengl/implementation/: framebuffer.cpp  mesh.cpp  shader.cpp  texture.cpp
pixelfall/platform/sdl/: sdl_callbacks.cpp
pixelfall/platform/sdl/implementation/: clock.cpp  input.cpp  input_manager.cpp  sdl_keycodes.h  window.cpp
src/: chess.cpp  chess.h  chess_board.cpp  chess_board.h  chess_game.cpp  chess_game.h  chess_moves.cpp  chess_moves.h  chess_piece.cpp  chess_piece.h  chess_pieces.cpp  chess_pieces.h  chess_state.cpp  chess_state.h  chess_visuals.cpp  chess_visuals.h  fen_parser.cpp  fen_parser.h  game.cpp  game.h  game_outcome.cpp  game_outcome.h  game_state.cpp  game_state.h  move_generation.cpp  move_generation.h  my_game.cpp  my_game.h
src/application/: my_game.cpp  my_game.h
src/config/: board_config.h  chess_config.h  chess_theme.h  engine_config.h  metadata_config.h  theme_config.h  window_config.h
src/core/: app_window.h  application.h  engine.cpp  engine.h  engine_window.h  window_config.h
src/engine/config/: engine_config.h  window_config.h
src/engine/core/: application.h  clock.h  engine.cpp  engine.h  shader.h  window.h
src/engine/math/: numbers.h  vector2.h
src/engine/platform/opengl/implementation/: shader.cpp
src/engine/platform/sdl/: sdl_callbacks.cpp
src/engine/platform/sdl/implementation/: clock.cpp  engine_window.cpp  window.cpp
src/game_objects/: chess_board.cpp  chess_board.h  chess_pieces.cpp  chess_pieces.h  promotion_ui.cpp  promotion_ui.h
src/math/: vector2.h
src/pixelfall/engine/config/: engine_config.h  window_config.h
src/pixelfall/engine/core/: application.cpp  application.h  clock.h  engine.cpp  engine.h  window.h
src/pixelfall/engine/graphics/: color.cpp  color.h  mesh.h  painter.cpp  painter.h  shader.h
src/pixelfall/engine/math/: numbers.h  vector2.h  vector4.h  vectors.h
src/pixelfall/engine/rendering/: shader.h
src/pixelfall/platform/opengl/implementation/: mesh.cpp  shader.cpp
src/pixelfall/platform/sdl/: sdl_callbacks.cpp
src/pixelfall/platform/sdl/implementation/: clock.cpp  window.cpp
src/platform/sdl/: app_window.cpp  engine_window.cpp  sdl_callbacks.cpp
src/rendering/: tile_highlights.cpp  tile_highlights.h
src/tools/: fen_parser.cpp  fen_parser.h  notation_parser.h
src/ui/: promotion_ui.cpp  promotion_ui.h  promotion_widget.cpp  promotion_widget.h
